--- a/sensor.html
+++ b/sensor.html
@@ -14,7 +14,6 @@
 	    <!-- CDN Imports -->
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css">
-		<script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
 		<link href="https://fonts.googleapis.com/css?family=Exo" rel="stylesheet">
 
 		<!-- Local Imports -->
@@ -116,7 +115,7 @@
 							<div class="ui fluid card">
 								<div class="content" id="centerAligned">
 									<h3 class="header">Your Sensors</h3>
-									<div class="description">Click on a sensor to go to track live data and view analytics based on your sensor data</div>
+									<div class="description">Click on a sensor to track live data and view analytics based on your sensor data</div>
 									<div class="ui divider"></div>
 									<table class="ui table structured celled unstackable">
 										<thead>
