--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 
 		<!-- Meta Tags -->
 		<meta charset="utf-8">
-	    <meta content="IE=edge" http-equiv="X-UA-Compatible">
-	    <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0" name="viewport">
-	    <meta http-equiv="Access-Control-Allow-Origin" content="*">
-	    <meta name="theme-color" content="#000000" />
-	    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-	    <meta http-equiv="Pragma" content="no-cache" />
-	    <meta http-equiv="Expires" content="0" />
+		<meta content="IE=edge" http-equiv="X-UA-Compatible">
+		<meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0" name="viewport">
+		<meta http-equiv="Access-Control-Allow-Origin" content="*">
+		<meta name="theme-color" content="#000000" />
+		<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+		<meta http-equiv="Pragma" content="no-cache" />
+		<meta http-equiv="Expires" content="0" />
 
-	    <!-- CDN Imports -->
+		<!-- CDN Imports -->
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.1/semantic.min.css">
 		<link href="https://fonts.googleapis.com/css?family=Exo" rel="stylesheet">
@@ -32,16 +32,16 @@
 		<div class="ui segment firstContainer">
 			<nav class="navContainer">
 				<div class="logo">
-				    <a href="index.html">
-				        <div class="random">
-				            <span class="nbr ltr">0</span>
-				            <span class="nbr ltr">0</span>
-				            <span class="nbr ltr">0</span>
-				            <span class="nbr ltr">0</span>
-				            <span class="nbr ltr">0</span>
-				            <span class="nbr ltr">0</span>
-				        </div>
-				    </a>
+					<a href="index.html">
+						<div class="random">
+							<span class="nbr ltr">0</span>
+							<span class="nbr ltr">0</span>
+							<span class="nbr ltr">0</span>
+							<span class="nbr ltr">0</span>
+							<span class="nbr ltr">0</span>
+							<span class="nbr ltr">0</span>
+						</div>
+					</a>
 				</div>
 				<div class="navOptions">
 					<a href="" class="navLink" id="computerOnly">Services</a>
@@ -122,6 +122,20 @@
 		<!-- Local Imports -->
 		<script src="assets/js/main.js"></script>
 		<script src="assets/js/index.js"></script>
-		<!-- https://redstapler.co/10-stunning-css-3d-effect-must-see/ -->
+
+		<script>
+			//Service Worker
+			if ('serviceWorker' in navigator)
+			{
+				navigator.serviceWorker.register('serviceWorker.js').then(function(registration)
+				{
+					console.log('ServiceWorker registration successful with scope: ', registration.scope);
+				},
+				function(err)
+				{
+					console.log('ServiceWorker registration failed with error: ', err);
+				});
+			}
+		</script>
 	</body>
 </html>
