--- a/actuator.html
+++ b/actuator.html
@@ -69,7 +69,6 @@
 								<div class="content">
 									<div class="header">Actuator</div>
 									<div class="description">Actuators controls devices</div>
-									<div class="alchemy" id="alchemy"></div>
 								</div>
 							</div>
 						</div>
@@ -108,7 +107,8 @@
 										<thead>
 											<tr>
 												<th>Name</th>
-												<th>Description</th>
+												<th class="hideOnMobile">Description</th>
+												<th>Current State</th>
 												<th class="hideOnMobile">Actuator ID</th>
 												<th class="hideOnMobile">Node ID</th>
 											</tr>
