--- a/login.html
+++ b/login.html
@@ -59,7 +59,7 @@
 					<button class="ui teal button" type="submit" id="submit" name="submit">Log In</button>
 					<div class="ui error message"></div>
 					<div class="ui negative message errorMessage" id="errorMessage">
-						<div class="header">Authentication Error</div>
+						<div class="header" id="loginError">Authentication Error</div>
 						<p id="errorDescription">Invalid Username or Password</p>
 					</div>
 				</form>
