--- a/sensorInfo.html
+++ b/sensorInfo.html
@@ -240,9 +240,9 @@
 									<table class="ui celled table unstackable" id="actionTable">
 										<thead>
 											<tr>
-												<th>Condition</th>
-												<th>Value</th>
-												<th>Action</th>
+												<th class="hideOnMobile">Condition</th>
+												<th class="hideOnMobile">Value</th>
+												<th class="hideOnMobile">Action</th>
 												<th>Actuator</th>
 												<th>Revoke Rule</th>
 											</tr>
